# de-course-starter-kit

./: .gitignore  README.md  STUDENT_README_TEMPLATE.md  docker-compose.yml  generate_fixtures.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: orders_etl_dag.py
data_samples/: app_logs.txt  raw_orders.json
src/: analytics.py  connector.py  decorators.py  main.py  models.py  stream_reader.py
src/de_course_starter_kit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_etl_logic.py
