[project]
name = "de-course-starter-kit"
version = "0.1.0"
description = "Стартовый репозиторий для магистров по курсу Python для инженерии данных"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "polars==0.20.5",
    "sqlalchemy==2.0.25",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "ruff",
    "mypy",
]

[tool.ruff]
select = ["E", "F", "W", "I"]
ignore = []
line-length = 79
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "types-psycopg2>=2.9.21.20260518",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
