[project]
name = "de-course-starter-kit"
version = "0.1.0"
description = "Стартовый репозиторий для магистров по курсу Python для инженерии данных"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "polars==0.20.5",
    "sqlalchemy==2.0.25",
]

[dependency-groups]
dev = [
    "pytest==8.0.0",
    "ruff",
    "mypy",
    "types-psycopg2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.ruff.lint]
# Включаем базовые правила (E, F, W) и сортировку импортов (I)
select = ["E", "F", "W", "I"]
ignore = [
    "F401", # Игнорируем неиспользуемые импорты (так как это заготовки для студентов)
    "E701", # Игнорируем написание "pass" на одной строке с двоеточием в заготовках
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
